<resources>
    <string name="app_name">StockTake</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stock Take</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_setting">Setting</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_stocksave">Stock Save</string>
    <string name="menu_stockedit">Stock Edit</string>
    <string name="menu_stocklist">Stock List</string>
    <string name="menu_setting">Setting</string>
</resources>